--- a/Salary-data.ipynb
+++ b/Salary-data.ipynb
@@ -17,7 +17,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt",
+      "import warnings"
+"warnings.filterwarnings("ignore")"
+
    ]
   },
   {
