--- a/Salary-data.ipynb
+++ b/Salary-data.ipynb
@@ -17,9 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt",
-      "import warnings"
-"warnings.filterwarnings("ignore")"
+    "import matplotlib.pyplot as plt"
 
    ]
   },
